tests/ivg/invalid/path_text_missing_text.ivg
format IVG-3
BOUNDS 0,0,10,10
// text inside path requires the string argument
PATH [text]

